--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,15 @@ letter-spacing: 0.54px;
 text-transform: uppercase;
 
 }
-.header-logo link {
+.header-logo-text {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5; }
+.header-logo-link {
     color: var(--IRIS, #4D5AE5);
     font-family: Raleway;
     font-size: 18px;
@@ -30,6 +38,8 @@ text-transform: uppercase;
     text-transform: uppercase;
 
 }
+.header-logo-text .studio {
+    color: #2e2f42;}
 .header-menu-list {
     color: var(--NAVY-BLUE, #2E2F42);
     /* Body Medium */
@@ -43,8 +53,12 @@ text-transform: uppercase;
 .header-menu-item {
 
 }
-.header-menu-menu-link {
-
+.header-menu-menu-link:hover {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-decoration: none;
 }
 .header-logo-web { color: var(--NAVY-BLUE, #2E2F42);
     font-family: Raleway;
