--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,20 @@ cursor: pointer;
 
 }
 .team-item {
+}
+.portfolio {
+
+}
+.portfolio-title{
+
+}
+.portfolio-item{
+
+}
+.portfolio-subtitle{
+
+}
+.portfolio-text {
 
 }
 .footer {
