--- a/css/styles.css
+++ b/css/styles.css
@@ -10,23 +10,10 @@ a {
     text-decoration: none;
 }
 .logo { font-family: "Raleway", sans-serif;
-    line-height: 1.17;}
+    line-height: 1.17;
+}
 
 
-.section-title{
-color: var(--NAVY-BLUE, #2E2F42);
-text-align: center;
-font-size: 36px;
-font-weight: 700;
-line-weight: 1.11;
-letter-spacing: 0.02em;
-}
-.subtitle { color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-}
 .text 
 {
     color: var (--SLATE, #434455)
@@ -48,8 +35,10 @@ letter-spacing: 0.02em;
 .header-logo span {
     color: #2e2f42;
 }
-.header-link {
-
+.header-link { 
+    font-family: "Raleway", sans-serif;
+    line-height: 1.17;
+  
 }
 .header-menu-list {
     color: var(--NAVY-BLUE, #2E2F42);
