--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,6 @@ a {
     line-height: 1.17;
 }
 
-
-.text 
-{
-    color: var (--SLATE, #434455)
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-.header {}
 .header-navigation {}
 .header-logo {
     font-family: 'Raleway', sans-serif;
@@ -38,15 +28,11 @@ a {
 .header-link { 
     font-family: "Raleway", sans-serif;
     line-height: 1.17;
+    color: #4d5ae5;
+    text-decoration: none;
   
 }
-.header-menu-list {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
+
 .header-link:hover {
 font-family: Roboto;
 font-weight: 400;
@@ -59,10 +45,10 @@ color: var(--OCEAN, #404bbf);}
     font-style: normal;
 }
 .adress-link {
-    color: var(--SLATE, #434455);
+    color: var(--SLATE, #404bbf);
     font-size: 16px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
