--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ color: var(--OCEAN, #404bbf);}
     font-style: normal;
 }
 .adress-link {
-    color: var(--SLATE, #404bbf);
+    color: var(--SLATE, #434455);
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
