--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ line-height: 1.07em;
 letter-spacing: 0.02em;
 }
 .hero-butt {
-color: var (--WHITE, #FFF);
+color: var(--WHITE, #FFF);
 font-family: inherit;
 font-size: 16px;
 font-weight: 500;
@@ -134,7 +134,7 @@ color: #2e2f42;
 }
 .footer-logo {
     color: var(--CLOUD, #F4F4FD);
-    font-family: "Raleway"; sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5em;
