--- a/css/styles.css
+++ b/css/styles.css
@@ -18,32 +18,26 @@ a {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.15;
-    letter-spacing: 0.02em;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5; }
 .header-logo span {
     color: #2e2f42;
 }
 .header-menu{
-    font-weight: 500;
-    line-height: 1.15;
-    letter-spacing: 0.02em;
-    color: #4d5ae5;
 }
 .header-link { 
     font-weight: 500;
-    line-height: 1.15;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #4d5ae5;
+    color: #2e2f42;
     font-size: 16px;
 }
 
 .header-link:hover {
 font-family: Roboto;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.02em;
+font-weight: 400;;
 color: #404bbf;
 }
 .header-link:focus {
