--- a/css/styles.css
+++ b/css/styles.css
@@ -76,12 +76,12 @@ font-size: 16px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
-background-color: #4D5AE5;
+background: var(--IRIS, #4D5AE5);
  color: #ffffff; 
 cursor: pointer;
 }
 .hero-butt:hover, .hero-butt:focus{
-    border-color: var(--OCEAN, #404bbf);
+    background-color: var(--OCEAN, #404BBF);
 }
 .features {
 }
