--- a/css/styles.css
+++ b/css/styles.css
@@ -177,15 +177,15 @@ letter-spacing: 0.32px;
     font-weight: 700;
     line-height: 1.17em;
     letter-spacing: 0.03em;
-    text-transform: uppercas;
+    text-transform: uppercase;
    
 }
-.footer-logo-span { 
-    color: #F4F4FD;
+.footer-logo span { 
+    color: #f4f4f4;
 }
 
 .footer-text {
-color: #F4F4FD
+color: #f4f4f4;
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5em;
