--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ cursor: pointer;
     background-color: #FFFFFF;
 }
 .team-item {
+    background-color: #FFFFFF;
 }
 .team-name{
     color: var(--NAVY-BLUE, #2E2F42);
