--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5; }
-.header-logo span {
+    .header-logo-itallic {
     color: #2e2f42;
 }
 .header-menu{
@@ -181,12 +181,12 @@ letter-spacing: 0.32px;
     text-transform: uppercase;
    
 }
-.footer-logo span { 
+.footer-logoitalic { 
     color: #f4f4f4;
 }
 
 .footer-text {
-color: #f4f4f4;
+color: #F4F4FD;
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5em;
