--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ letter-spacing: 0.32px;
     text-transform: uppercase;
    
 }
-.footer-logoitalic { 
+.footer-logo-span { 
     color: #f4f4f4;
 }
 
