--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,19 @@ ul{
 a {
     text-decoration: none;
 }
+p, h1,h2,h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
 .logo { font-family: "Raleway", sans-serif;
     line-height: 1.17;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-navigation {}
@@ -43,6 +54,13 @@ color: #404bbf;
 .header-link:focus {
     color: #404bbf;
 }
+.container {
+width: 1116px; ;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
+}
+
 
 .adress {
     font-style: normal;
@@ -62,6 +80,9 @@ color: #404bbf;
 .title {
     background: var(--NAVY-BLUE, #2E2F42);
 }
+.title-container {
+    
+}
 .hero-title {
     color: var(--WHITE, #FFF);
 text-align: center;
@@ -69,6 +90,8 @@ font-size: 56px;
 font-weight: 700;
 line-height: 1.07em;
 letter-spacing: 0.02em;
+padding-bottom: 48px;
+padding-top: 188px;
 }
 .hero-butt {
 font-family: inherit;
@@ -79,11 +102,13 @@ letter-spacing: 0.04em;
 background: var(--IRIS, #4D5AE5);
  color: #ffffff; 
 cursor: pointer;
+margin-bottom: 188px;
 }
 .hero-butt:hover, .hero-butt:focus{
     background-color: var(--OCEAN, #404BBF);
 }
 .features {
+    padding-top: 120px;
 }
 .vissually-hidden{}
 .features-list {
@@ -103,6 +128,7 @@ cursor: pointer;
 }
 .team {
     background: var(--CLOUD, #F4F4FD);
+    padding-top: 120px;
 }
 .visual-team {
     font-size: 36px; 
