--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ margin-bottom: 188px;
     letter-spacing: 0.02em; 
     text-transform: capitalize; 
     color: #2e2f42;
+    padding-bottom: 72px;
 }
 .team-list {
     background-color: #FFFFFF;
@@ -171,9 +172,11 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2e2f42;
+padding-top: 120px;
+padding-bottom: 72px;
 }
 .portfolio-item{
-
+margin-bottom: 120px;
 }
 .portfolio-subtitle{
     background-color: #FFFFFF;
@@ -196,6 +199,7 @@ letter-spacing: 0.32px;
 }
 .footer {
     background-color:  #2E2F42;
+   
 }
 .footer-logo {
     color:  #4d5ae5;
@@ -205,10 +209,14 @@ letter-spacing: 0.32px;
     line-height: 1.17em;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    padding-top: 101.5px;
+   
    
 }
 .footer-logoitalic { 
     color: #f4f4fd;
+    padding-top: 101.5px;
+
 }
 
 .footer-text {
@@ -217,4 +225,6 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5em;
 letter-spacing: 0.02em;
+padding-bottom: 120px;
+margin-top: 17px;
 }
