--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,6 @@ color: #404bbf;
     background: var(--NAVY-BLUE, #2E2F42);
 }
     
-}
 .hero-title {
     color: var(--WHITE, #FFF);
 text-align: center;
@@ -151,9 +150,9 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2e2f42;
 }
-.portfolio-item{
+.portfolio-item{}
 .portfolio-subtitle{
-    background-color: #FFFFFF;
+background-color: #FFFFFF;
 }
 .portfolio-text {
     color:#2E2F42;
@@ -196,4 +195,4 @@ color: #F4F4FD;
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5em;
-letter-spacing: 0.02em;
+letter-spacing: 0.02em;}
