--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ cursor: pointer;
     line-height: 1.2; /* 120% */
     letter-spacing: 0.02em;
 }
-.team-pos {
+.team-positione {
     color: var(--SLATE, #434455);
     text-align: center;
     font-size: 16px;
