--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
 
 .header-navigation {}
 .header-logo {
+    font-family: "Roboto";
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
