--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,13 @@ body {
     background-color: #FFFFFF; /* Фон сторінки */
 }
 
-.logo { font-family: "Raleway", sans-serif;
+.logo { font-family: "Roboto", sans-serif;
     line-height: 1.17;
 }
 
 .header-navigation {}
 .header-logo {
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
